[gd_scene load_steps=7 format=2]

[ext_resource path="res://CheckBoxes/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://CheckBoxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Enemy/EnemyStats.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
}, {
"args": [ false ],
"method": "set_invincible"
} ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Weapon" type="Node2D" parent="Sprite"]

[node name="WordInteract" type="Area2D" parent="Sprite"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/WordInteract"]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 1 )]
collision_layer = 4

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_mask = 8

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 2 )

[node name="MainCenter" type="Position2D" parent="."]

[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="enemy_died" from="EnemyStats" to="." method="_on_EnemyStats_enemy_died"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
